--- a/ruoyi-modules/ruoyi-workflow/pom.xml
+++ b/ruoyi-modules/ruoyi-workflow/pom.xml
@@ -16,10 +16,6 @@
         工作流模块
     </description>
 
-    <properties>
-        <flowable.version>6.8.0</flowable.version>
-    </properties>
-
     <dependencies>
 
         <!--引入flowable依赖-->
@@ -38,7 +34,7 @@
         <dependency>
             <groupId>org.flowable</groupId>
             <artifactId>flowable-json-converter</artifactId>
-            <version>${flowable.version}</version>
+            <version>6.8.0</version>
         </dependency>
 
         <!--系统模块-->
